# feup-pfl

./: README.md  first_turn.pl  waldmeister.pl
Proj1/: README.md  waldmeister.pl
Proj2/: CHANGELOG.md  README.md  pfl-proj02.cabal
Proj2/src/: Assembler.hs  AssemblerSpec.hs  Compiler.hs  Parser.hs  ParserSpec.hs  Types.hs
Proj2/test/: AssemblerTests.hs  ParserTests.hs
